# brainglobe-segmentation

./: .gitignore  .pre-commit-config.yaml  .travis.yml  CITATION.cff  LICENSE  MANIFEST.in  README.md  pyproject.toml  pytest.ini  setup.cfg  setup.py  tox.ini
.github/workflows/: plugin_preview.yml  test_and_deploy.yml
.napari/: config.yml
brainglobe_segmentation/: __init__.py  napari.yaml  paths.py  segment.py
brainglobe_segmentation/atlas/: utils.py
brainglobe_segmentation/image/: utils.py
brainglobe_segmentation/layout/: gui_constants.py  gui_elements.py  utils.py
brainglobe_segmentation/regions/: IO.py  analysis.py  layers.py
brainglobe_segmentation/segmentation_panels/: regions.py  tracks.py
brainglobe_segmentation/tracks/: IO.py  analysis.py  fit.py
brainreg_segment/: __init__.py  gui_elements.py  napari.yaml  paths.py  plugins.py  segment.py
brainreg_segment/atlas/: utils.py
brainreg_segment/image/: utils.py
brainreg_segment/layout/: gui_constants.py  gui_elements.py  utils.py
brainreg_segment/measurement/: measurement.py  random_layers.py
brainreg_segment/regions/: IO.py  analysis.py  layers.py
brainreg_segment/segmentation/: region.py  track.py
brainreg_segment/segmentation_panels/: regions.py  tracks.py
brainreg_segment/tracks/: IO.py  analysis.py  fit.py  layers.py
tests/: conftest.py
tests/data/brainreg_output/: brainreg.json
tests/data/brainreg_output/manual_segmentation/sample_space/tracks/: track_1.csv  track_1.points
tests/data/brainreg_output/manual_segmentation/standard_space/regions/: summary.csv  test_region.csv
tests/data/brainreg_output/manual_segmentation/standard_space/tracks/: test_track.csv  test_track.h5  test_track.points
tests/data/brainreg_output/segmentation/atlas_space/tracks/: test_track.csv  test_track.npy
tests/data/brainreg_output/segmentation/sample_space/tracks/: track_0.csv  track_0.points
tests/data/regions/: region.tiff
tests/data/tracks/: track.csv  track.h5  track.npy  track.points
tests/tests/test_integration/test_gui/: test_gui.py  test_region_ui_functionality.py  test_regions.py  test_show_info_commands.py  test_track_ui_functionality.py  test_tracks.py
tests/tests/test_integration/test_tracks/: test_track_analysis.py
tests/tests/test_unit/test_atlas/: test_atlas_utils.py
tests/tests/test_unit/test_image/: test_image_utils.py
tests/tests/test_unit/test_regions/: test_region_IO.py  test_region_analysis.py
tests/tests/test_unit/test_segmentation_panels/: test_regions.py
tests/tests/test_unit/test_tracks/: test_track_IO.py  test_track_analysis_tools.py
travis/: install_test_linux.sh  install_test_osx.sh  test_windows.sh
